# file-sorter

./: .gitignore  main.py  pyproject.toml
src/: console.py  consts.py  sorter.py
src/models/: file.py  path.py
